src/test/deca/context/valid/method_call_main.deca
// Description:
//    Test de l'appel d'une méthode dans un main
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
    int x;
    int getX() {
      return x;
    }
}
{
    A a;
    a.getX();
}